fixing flex row reverse flex item gaps

--- a/Bootstrap/utility/_flex.scss
+++ b/Bootstrap/utility/_flex.scss
@@ -119,6 +119,14 @@
     .flexItem:last-child {
         padding-right: 0;
     } 
+
+    .flex-row-reverse .flexItem {
+        padding-left: var(--flex-gap);
+    }
+
+    .flex-row-reverse .flexItem:last-child {
+        padding-left: 0;
+    }
 }
 
 /* Flex Utility  */
